# Cryptify

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cpp-core/: CMakeLists.txt
cpp-core/include/: crypto_wrapper.hpp  database.hpp
cpp-core/src/: crypto_wrapper.cpp  main.cpp
docs/: CPP_IMPLEMENTATION.md  GUIDE.md  Rust_implementation.md
include/: CLI.hpp  CryptoManager.hpp  dBase.hpp
rust-crypto/: Cargo.toml
rust-crypto/src/: lib.rs
src/: CLI.cpp  CryptoManager.cpp  dBase.cpp  main.cpp
